--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.6/semantic.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/react/15.4.1/react.min.js">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/react/15.4.1/react-dom-server.min.js">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/react/15.4.1/react-dom.min.js">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
